# model_JekyllHyde

./: .gitignore  LICENSE  README.md  install.bat  pyproject.toml  requirements.txt  run_server.bat  start.bat
config/: learning.yaml  platform_prefs.yaml  specialization.yaml  storage.yaml  verification_providers.yaml  workforce.yaml
data/: active_guidelines.md  active_guidelines.meta.json  community_guidelines.md  guideline_probes.yaml  guideline_probes_apac.yaml  keyword_rules.yaml  red_team_seeds.yaml  test_cases.yaml
data/learning/: state.json  (+2 more)
hf_hub/: hyde-lora-README.md  jekyll-lora-README.md
hf_space/: README.md  app.py  requirements.txt
models/: Modelfile  Modelfile.generated  Modelfile.merged  Modelfile.merged.generated
safety_eval/: __init__.py  arena.py  arena_report.py  categories.py  cli.py  evaluator.py  evolution.py  evolution_report.py  guidelines.py  jekyll_hyde.py  jekyll_hyde_cli.py  loader.py  memory.py  models.py  red_blue_cli.py  report.py  store.py
scripts/: JekyllHyde.vbs  benchmark_moe.py  build_release.bat  build_release.ps1  capture_readme_screenshots.py  check_health.ps1  create_model.py  data_diet.py  evolve_train.bat  launch.ps1  restart.bat  run_server.bat  setup_free_mcp.py  setup_platform.bat  setup_training.py  start.bat  stop.bat  stop.ps1  train_lora.bat  upload_hf_hub.py  verify_today.py
training/: README.md  bootstrap_adapters.py  config.yaml  continuous.py  format_examples.py  mcp_tool_examples.py  merge_and_export.py  prepare_dataset.py  quantize_export.py  specialization_examples.py  train_dpo.py  train_lora.py
(+92 files in other folders)
