[project]
name = "jekyll-hyde"
version = "0.5.0"
description = "Jekyll & Hyde — Gemma LoRA + MCP Guidelines Chat platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
train = [
    "torch>=2.1",
    "transformers>=4.40",
    "peft>=0.10",
    "datasets>=2.18",
    "accelerate>=0.28",
    "bitsandbytes>=0.43",
]
quant = [
    "yfinance>=0.2",
    "finance-datareader>=0.9",
    "duckduckgo-search>=6.0",
]

[project.scripts]
jekyll-hyde = "safety_eval.jekyll_hyde_cli:main"
jekyll-hyde-platform = "safety_eval.platform.serve:main"
jekyll-hyde-chat = "safety_eval.apps.guidelines_chat.server:main"
jekyll-hyde-mcp = "safety_eval.mcp.server:main"
safety-eval = "safety_eval.cli:main"
red-blue = "safety_eval.red_blue_cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["safety_eval*"]
